--- a/Task3-4/pom.xml
+++ b/Task3-4/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.kpfu.it</groupId>
 	<artifactId>Task3-4</artifactId>
-
+    < <version>1.0-SNAPSHOT</version>
 	
     <dependencies>
         <dependency>
